# rocktimes-backend

./: .app.py  LICENSE  README.md  __init__.py  dagger.json  database.py  hello.py  main.py  models.py  pyproject.toml  requirements.txt  resolvers.py  schema.py
.github/workflows/: main_pipeline.yml
config/: __init__.py
controllers/: auth_controller.py  resolvers.py  user_controller.py
dagger/src/main/: __init__.py
middlewares/: __init__.py  auth_middleware.py  error_middleware.py  user_middleware.py
models/: event_model.py  user_model.py
routes/: __init__.py  auth_routes.py  event_routes.py  user_routes.py
services/: user_service.py
tests/unit/: test_event_controller.py
