[project]
name = "rocktimes-backend"
version = "0.1.0"
description = "Rocktimes GraphQL Backend"
readme = "README.md"
authors = [{ name = "Spluca", email = "hello@spluca.org" }]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "dagger-io>=0.13.6",
    "fastapi[standard]>=0.115.3",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "pip>=24.3",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
    "strawberry-graphql[debug-server,fastapi]>=0.247.0",
    "uvicorn[standard]>=0.32.0",
    #   "py-mas",
    #   "py-ms[request]",
    #   "py-ms[swaggwer]",
    #   "py-ms[metrics]",
    #   "po-ms[race]"
]
